
- Python 3.8.0 or newer is now required.
  - Support for Python 3.6 and 3.7 is dropped, as they both reached
    their [end of life] in December 2021 and June 2023, respectively.
- Support for Qt/PyQt before 5.15.0 and QtWebEngine before 5.15.2 are now
  dropped, as older Qt versions are
  https://endoflife.date/qt[end-of-life upstream] since mid/late 2020
  (5.13/5.14) and late 2021 (5.12 LTS).
- It's planned to drop support for various legacy platforms and libraries which
  are unsupported upstream, such as:
  * The QtWebKit backend
  * macOS 10.14 (via Homebrew)
  * 32-bit Windows (via Qt)
  * Windows 8 (via Qt)
  * Windows 10 before 1809 (via Qt)
  * Possibly other more minor dependency changes

Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).
  Packagers are advised to use `misc/Makefile` if possible, which has been
  updated with the new paths.
- The `content.javascript.can_access_clipboard` setting got renamed to
  `content.javascript.clipboard` and now understands three different values
  rather than being a boolean: `none` (formerly `false`), `access` (formerly
  `true`) and `access-paste` (additionally allows pasting content, needed for
  websites like Photopea or GitHub Codespaces).
- The default `hints.selectors` now also match the `treeitem` ARIA roles.
- The `:click-element` command now can also click elements based on its ID
  (`id`), a CSS selector (`css`), a position (`position`), or click the
  currently focused element (`focused`).
- The `:click-element` command now can select the first found element via
  `--select-first`.
- New `search.wrap_messages` setting, making it possible to disable search
  wrapping messages.
- The `:session-save` command now has a new `--no-history` flag, to exclude tab
  history.
- New widgets for `statusbar.widgets`: